feat: Improve rendering logic with Math.clamp for better value handling and add isNightTime method for accurate night detection